--- a/css/activity2.css
+++ b/css/activity2.css
@@ -1,24 +1,27 @@
 html {
-	height=100%
+	height:100%
 }
 body {
 	margin: 0;
 	font-family: Verdana, sans-serif;
 	background: rgb(61,61,61);
 	background: linear-gradient(180deg, rgba(61,61,61,1) 15%, rgba(255,255,255,1) 100%);
-
 }
 #wrapper {
 	margin-left: auto;
 	margin-right: auto;
 	padding: 20px 40px;
+	padding-bottom: 20px;
 	max-width: 1000px;
 }
 #container {
-	height: 100%;
-	min-height: 300px;
+	min-height: 100%;
 	background-color: white;
 	box-shadow: inset 2px 2px 4px 0px rgba(0,0,0,0.6);
+}
+h1 {
+	padding-top: 10px;
+	padding-left: 15px;
 }
 #main {
 	margin-top: 15px;
@@ -29,6 +32,16 @@ body {
 	padding-top: 1px;
 	padding-bottom: 1px;
 	max-width: 960px;
+}
+p {
+	padding-bottom: 15px;
+}
+img {
+	float:left;
+	margin-left: auto;
+	margin-right: auto;
+	width: 20%;
+	padding-right: 15px;
 }
 footer { 
 	position: fixed;
