--- a/css/activity2.css
+++ b/css/activity2.css
@@ -12,10 +12,10 @@ body {
 	margin-right: auto;
 	padding: 20px 40px;
 	padding-bottom: 20px;
-	max-width: 1000px;
+	max-width: 900px;
 }
 #container {
-	min-height: 100%;
+	min-height: 320px;
 	background-color: white;
 	box-shadow: inset 2px 2px 4px 0px rgba(0,0,0,0.6);
 }
@@ -34,6 +34,7 @@ h1 {
 	max-width: 960px;
 }
 p {
+	max-width: 800px;
 	padding-bottom: 15px;
 }
 img {
